<resources>
    <string name="app_name">DemoAll</string>
    <string name="demo_all">All Demos</string>
    <string name="label_edit_playlist">Edit Name</string>
    <string name="hint_enter_name">Enter Name</string>
    <string name="cancel">cancel</string>
    <string name="done">done</string>
    <string name="student_fragment">Student Fragment</string>
    <string name="show_fragment">Show Fragment</string>
    <string name="openDrawer">Open</string>
    <string name="choose_a_language">Choose a Langauge</string>
    <string name="closedDrawer">Closed</string>
    <string name="string_startservice">Start Service</string>
    <string name="string_stopservice">Stop Service</string>
    <string name="string_bind">Bind Service</string>
    <string name="string_unbind">Unbind Service</string>
    <string name="string_getrandom_number">Get Random Number</string>
    <string name="startThread">Start Thread</string>
    <string name="stopThread">Stop Thread</string>
    <string name="startCustomThread">Start  Custom Thread</string>
    <string name="stopCustomThread">Stop Custom Thread</string>
    <string name="deny_runtime_permission">Deny Runtime permission</string>
    <string name="read_contacts">Read Contacts</string>
    <string name="read_external_contacts">Read External Contacts</string>
    <string name="write_external_contacts">Write External Contacts</string>
    <string name="type_fetch_contacts">Fetch Contacts</string>
    <string name="invite_user">invite user</string>
    <string name="already_invite">already invite</string>
    <string name="fullname">Your full name</string>
    <string name="username">Username</string>
    <string name="email">E-mail (optional)</string>
    <string name="emailcompulsary">E-mail</string>
    <string name="passwordmin8char">Password (min. 8 characters)</string>
    <string name="confirm_passwordmin8char">Confirm Password</string>
    <string name="companyname">Company name (optional)</string>
    <string name="phonenumber">Phone number</string>
    <string name="location">Your Location</string>
    <string name="countrycode">+234</string>
    <string name="autodetectlocation">Auto detect location</string>
    <string name="empty_full_name">Please enter full name</string>
    <string name="empty_user_name">Please enter user name or email</string>
    <string name="empty_user_name_only">Please enter user name</string>
    <string name="empty_email">Please enter email id</string>
    <string name="empty_password">Please enter password</string>
    <string name="empty_company_name">Please enter company name</string>
    <string name="empty_phone_number">Please enter phone number</string>
    <string name="empty_confirm_password">Please enter confirm password</string>
    <string name="length_full_name">Full name should be less than 40 characters</string>
    <string name="full_name_contain_special_characters">Full name should not contain special characters</string>
    <string name="user_name_contain_special_characters">User name should not contain special characters</string>
    <string name="length_user_name_short">User name should be minimum 3 characters long</string>
    <string name="length_user_name">User name should be less than 30 characters</string>
    <string name="length_email_phone_number">Email id should be less than 60 characters</string>
    <string name="length_company_name">Company name should be less than 50 characters</string>
    <string name="length_password_short">Your password is too short, it must contain atleast 8 characters</string>
    <string name="length_password">Password should be in between 8 to 20 characters</string>
    <string name="length_phone">Phone number should be in between 4 to 20 characters</string>
    <string name="password_contain_special_characters">Password should contain special characters</string>
    <string name="length_confirm_password">Confirm password should be in between 8 to 20 characters.</string>
    <string name="phone_number_length">Phone number should be in between 8 to 14.</string>
    <string name="phone_number_not_start_with_zero">Phone number should not start with zero.</string>
    <string name="password_confirm_password">Password and confirm Password does not match</string>
    <string name="all_fields_contain_valid_data">All fields contain valid data.</string>
    <string name="valid_email">Please enter valid email id</string>
    <string name="enter_email_id">Please enter email id</string>
    <string name="enter_password">Please enter password</string>
    <string name="enter_confirm_password">Please enter confirm password</string>
    <string name="empty_location">Please select location</string>
    <string name="no_space_user_name">User name doesn\'t allow space</string>
    <string name="broadcast_receiver_for_power_connected_and_disconnected">Show toast message when power connected and disconnected</string>
    <string name="broadcast_receiver_for_internet_connected_and_disconnected">Show toast message when internet connected and disconnected</string>
    <string name="broadcast_receiver_for_phone_state">Show toast message of Phone State</string>
    <string name="static_broadcast_receiver_example">Static Broadcast Receiver Example</string>
    <string name="dynamic_broadcast_receiver_example">Dynamic Broadcast Receiver Example</string>
    <string name="read_phone_state_broadcast_receiver_example">Read Phone State Broadcast Receiver Example</string>
    <string name="CALL_ACTIVITY_METHOD_FROM_ANOTHER_BR_EXAMPLE">Call Activity Method from Other Through Broadcast Receiver Example</string>
    <string name="local_broadcast_manager_example">Local Broadcast Manager Example</string>
    <string name="internet_connected_broadcast_receiver_example">Internet connected Broadcast Receiver</string>
    <string name="custom_broadcast_receiver_example">Custom Broadcast Receiver Example</string>
    <string name="please_wait">Contacts loading.. Please wait..</string>
    <string name="invite">Invite</string>
    <string name="accessCamera">Access Camera</string>
    <string name="custom_gallery_multiple_selection">Custom Gallery Multiple Selection</string>
    <string name="custom_gallery_single_selection">Custom Gallery Single Selection</string>
    <string name="select_image_count">Select image count</string>
    <string name="post_images">Post Images</string>
    <string name="upload_image">Upload Image</string>
    <string name="delete_image">Delete Image</string>
    <string name="description_length">Description length max. 45 characters.</string>
    <string name="length_filter">Apply length filter on Edittext</string>
    <string name="terminal">Terminal</string>
    <string name="message">Message</string>
    <string name="my_place">MyPlace</string>
    <string name="search">Search</string>
    <string-array name="countries">
        <item>India</item>
        <item>USA</item>
        <item>Pakistan</item>
        <item>Bangladesh</item>
        <item>Egypt</item>
        <item>Indonesia</item>
        <item>UK</item>
        <item>Germany</item>
    </string-array>
    <string-array name="options">
        <item name="MEDIAPLAYER_EXAMPLES">MEDIA PLAYER EXAMPLES</item>
        <item name="GALLERY_EXAMPLES">GALLERY EXAMPLES</item>
        <item name="PERMISSION_EXAMPLS">PERMISSION EXAMPLES</item>
        <item name="BANDWIDTH_EXAMPLS">BANDWIDTH EXAMPLES</item>
        <item name="QR_CODE_SCANNER">QRCODE SCANNER</item>
        <item name="VIEWPAGER_EXAMPLS">VIEW PAGER EXAMPLES</item>
        <item name="INTENT_EXAMPLS">INTENT EXAMPLES</item>
        <item name="IMAGES_EXAMPLS">IMAGES EXAMPLES</item>
        <item name="VALIDATIONS">VALIDATION EXAMPLES</item>
        <item name="CUSTOM_CLASS_EXAMPLES">CUSTOM CLASS EXAMPLES</item>
        <item name="DIALOG_FRAGMENTS">DIALOG EXAMPLES</item>
        <item name="DRAWER_EXAMPLS">DRAWER EXAMPLES</item>
        <item name="FRAGMENTS">FRAGMENTS EXAMPLES</item>
        <item name="ADAPTER_EXAMPLES">ADAPTER EXAMPLES</item>
        <item name="BROADCAST_RECEIVERS_EXAMPLS">BROADCAST RECEIVERS EXAMPLS</item>
        <item name="SERVICES_EXAMPLES">SERVICES EXAMPLES</item>
        <item name="THREAD_EXAMPLES">THREAD EXAMPLES</item>
        <item name="SELECT_UNSELECT_EXAMPLS">SELECT UNSELECT EXAMPLES</item>
    </string-array>
    <string name="click_button_select_unselect">Click Button for Select and Unselect</string>
    <string name="set_the_duration_of_your_newslist">Set the duration of your playlist</string>
    <string name="min15">15 min</string>
    <string name="min5">5 min</string>
    <string name="min10">10 min</string>
    <string name="type_of_network">Type of Network</string>
    <string name="bandwidth_value">BandWidthValue</string>
    <string name="find_network_info">Find Network Information</string>
    <string name="type_of_speed">Type of Speed</string>
</resources>