<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewthreadCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:padding="5dp"
            android:text=""
            android:typeface="serif"
            android:textColor="@color/colorRed"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonThreadStarter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewthreadCount"
            android:text="@string/string_startservice" />

        <Button
            android:id="@+id/buttonStopthread"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonThreadStarter"
            android:layout_marginTop="10dp"
            android:text="@string/string_stopservice" />

        <Button
            android:id="@+id/buttonBindService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonStopthread"
            android:layout_marginTop="10dp"
            android:text="@string/string_bind" />

        <Button
            android:id="@+id/buttonUnBindService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonBindService"
            android:layout_marginTop="10dp"
            android:text="@string/string_unbind" />

        <Button
            android:id="@+id/buttonGetRandomNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonUnBindService"
            android:layout_marginTop="10dp"
            android:text="@string/string_getrandom_number" />

    </LinearLayout>
</layout>