<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtStartThread"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/DP25"
            android:layout_weight="1"
            android:background="@color/app_theme_color_yellow"
            android:gravity="center"
            android:padding="@dimen/DP20"
            android:text="@string/startThread"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/SP25"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtStopThread"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/DP25"
            android:layout_weight="1"
            android:background="@color/app_theme_color_yellow"
            android:gravity="center"
            android:padding="@dimen/DP20"
            android:text="@string/stopThread"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/SP25"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtAnotherStartThread"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/DP25"
            android:layout_weight="1"
            android:background="@color/app_theme_color_yellow"
            android:gravity="center"
            android:padding="@dimen/DP20"
            android:text="@string/startCustomThread"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/SP25"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtAnotherStopThread"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/DP25"
            android:layout_weight="1"
            android:background="@color/app_theme_color_yellow"
            android:gravity="center"
            android:padding="@dimen/DP20"
            android:text="@string/stopCustomThread"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/SP25"
            android:textStyle="bold" />

    </LinearLayout>


</layout>